Bug 530740 - Avoid using new Integer in ScopePart
Change-Id: If5bb95a6ae5fdb1920d23babbd0744e6ba0c1f37
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>